--- a/Algoritmos/Site-Institucional/css/simulador.css
+++ b/Algoritmos/Site-Institucional/css/simulador.css
@@ -5,7 +5,7 @@ html{
 
 body{
     font-family: Helvetica, sans-serif;
-    background-color: #f9f9f9;
+    background-color: white; 
     margin: 0;
 }
 .msg-princ{
@@ -185,7 +185,7 @@ body{
     margin: 20px auto;
     padding: 20px;
     
-    background-color: #e2e0e0;
+    background-color: white;
     border-radius: 5px;
     border: solid 5px #dbd9d9;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
