--- a/Algoritmos/Site-Oficial/css/simulador.css
+++ b/Algoritmos/Site-Oficial/css/simulador.css
@@ -5,8 +5,9 @@ html{
 
 body{
     font-family: 'Roboto';
-    background-color: #f9f9f9;
+    background-color:  #f9f9f9;
     margin: 0;
+    width: 100%;
 }
 .msg-princ{
     display: flex;
@@ -41,8 +42,8 @@ body{
 }
 
 .navbar a {
-    color: #4E504D;
-    font-family: 'Roboto';
+    color: rgb(114, 114, 114);
+    font-family: Helvetica;
     text-align: center;
     text-decoration: none;
     font-size: 30px;
@@ -52,40 +53,49 @@ body{
 }
 
 .navbar a:hover {
-    color: #DB6901;
+    color: rgb(240, 91, 37);
     font-size: 33px;
     transition: all 0.3s ease-in-out;
 }
 
+.login a{
+    text-decoration: none;
+}
+
 .title {
-    font-size: 70px;
+    font-size: 50px;
     font-family: 'Jost';
     font-weight: bold;
     color: #DB6901
 }
-.sub-tittle{
+
+.sub-title{
 color: #4E504D;
 margin-top: 0;
+font-size: 25px;
 align-items: center;
 justify-content: center;
-margin-bottom: 20px;
 }
 
 .input-style {
-    padding-bottom: 20px;
-    font-size: 30px;
-    font-family: 'Jost';
+    padding-bottom: 10px;
+    font-size: 25px;
+    font-weight: 550;
+    font-family: 'Roboto';
     color: #4E504D;
 
 }
 .input-type {
-    border-radius: 10px;
     background-color: #f9f9f9;
-    height: 40px;
     border: solid 2px #999999;
+    border-radius: 10px;
+    
+    height: 40px;
     font-family: 'Roboto';
-    font-size: 100%;
+    font-size: 60%;
     color: #4E504D;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 .logo {
     display: flex;
@@ -122,7 +132,8 @@ margin-bottom: 20px;
 .input-local {
     text-align: center;
     margin: 0;
-    width: 101%;
+    width: 100%;
+
     background-color:#f9f9f9;
     font-family: 'Roboto';
     display: flex;
@@ -136,30 +147,34 @@ margin-bottom: 20px;
     background: fixed;
 }
 .sub-tittle {
-    font-size: 23px;
+    font-size: 20px;
 }
 .calc-button {
     background-color: #0A5436;
     color: #FFFFFF;
     cursor: pointer;
     font-family: 'Roboto';
-    padding: 10px;
+
     margin: 5px 0;
     width: 30%;
-    font-size: 16px;
+    padding: 15px;
+    font-size: 20px;
+
     border-top-right-radius: 25px;
     border-bottom-left-radius: 25px;
     border: 1px solid #FFFFFF;
-    font-family: 'Roboto';
 }
+
 .calc-button:hover {
     background-color: #DB6900;
     transition: background-color 0.3s;
 }
+
 .onda {
     padding: 10;
-    width: 101%;
-    height: 200px;
+    width: 100%;
+    height: 140px;
+
     background-color: #0A5436;
     display: flex;
     flex-direction: row;
@@ -173,12 +188,15 @@ margin-bottom: 20px;
 .div_msg_ton {
     position: absolute;
     z-index: -2;
-    top: 1550px;
+    top: 1200px;
     right: 400px;
     left: 400px;
+
+    font-size: 30px;
     padding-top: 50px;
     border-radius: 5px;
     color: #FFFFFF;
+    font-family: 'Jost';
 }
 
 .ton-saca {
@@ -190,9 +208,10 @@ margin-bottom: 20px;
 }
 
 .chart-container {
-    width: 1200px;
+    width: 1220px;
     margin: 20px auto;
     padding: 20px;
+
     background-color: #f9f9f9;
     border-radius: 5px;
     border: solid 5px #FFFFFF;
@@ -202,27 +221,31 @@ margin-bottom: 20px;
 }
 .info-box {
     padding-top: 10px;
-    width: 800px;
-    height: 200px;
+    width: 700px;
+    height: 150px;
     margin: 20px auto;
     text-align: center;
+
     border: solid 5px #FFFFFF;
     background-color: #FFFFFF;
+
     font-family: 'Roboto';
     font-size: 30px;
-    border-radius: 8px;
+    border-radius: 9px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     justify-content: center;
     align-items: center;
 }
+
 .info-box2 {
     padding-top: 5px;
-    width: 1250px;
+    width: 1200px;
     height: fit-content;
     margin: 20px auto;
     text-align: center;
     border: solid 5px #FFFFFF;
     background-color: #FFFFFF;
+
     font-family: 'Roboto';
     font-size: 30px;
     border-radius: 8px;
@@ -250,14 +273,14 @@ margin-bottom: 20px;
     align-self: center;
 
     font-family: 'Roboto';
-    font-size: 30px;
+    font-size: 25px;
 
     border: #0A5436;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
 
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     padding-right: 40px;
     padding-left: 40px;
 
@@ -270,13 +293,15 @@ margin-bottom: 20px;
     align-self: center;
     justify-content: center;
     flex-direction: column;
+
     margin-top: 20px;
     height: fit-content;
     width: fit-content;
     text-align: center;
     align-self: center;
     font-family: 'Roboto';
-    font-size: 60px;
+    font-size: 50px;
+
     border: #0A5436;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -288,8 +313,9 @@ margin-bottom: 20px;
     color:#0A5436;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
+
 canvas {
     width: 100%;
-    height: 400px;
+    height: 300px;
 }
 
