--- a/Algoritmos/Site-Oficial/css/login-registro.css
+++ b/Algoritmos/Site-Oficial/css/login-registro.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     height: 900px;
     width: 100%;
-    font-family: 'Roboto';
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container{
@@ -107,7 +107,6 @@ body{
   
 
 .card-login h2 { 
-    font-family: 'Roboto';
     font-weight: bolder;
     margin-bottom: 25px; 
     color: #0A5436; 
@@ -187,7 +186,6 @@ input:focus {
 
 .buttom-back h1{
     font-size: 32px;
-    font-family:'Roboto';
     color: white;
 }
 
@@ -202,6 +200,22 @@ input:focus {
     transition: all 0.3s ease-out;
 }
 
+.campo .senhaCarac {
+    color: red;
+    font-size: 15px;
+}
+.campo .nomeCarac {
+    color: red;
+    font-size: 15px;
+}
+.campo .emailCarac {
+    color: red;
+    font-size: 15px;
+}
+.campo .cpf_cnpjCarac {
+    color: red;
+    font-size: 15px;
+}
 /* @media (max-width: 768px) {
     .coluna {
     width: 90%;
