--- a/Algoritmos/Site-Oficial/css/home.css
+++ b/Algoritmos/Site-Oficial/css/home.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto';
 
 }
 
@@ -152,7 +152,7 @@ body {
 
 .botao {
     width: 200px;
-    height: 50px;
+    height: 40px;
     border: rgb(0, 0, 0, 0);
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
