--- a/Algoritmos/Site-Oficial/css/login-registro.css
+++ b/Algoritmos/Site-Oficial/css/login-registro.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     height: 900px;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto';
 }
 
 .container{
