--- a/Algoritmos/Site-Oficial/css/simulador.css
+++ b/Algoritmos/Site-Oficial/css/simulador.css
@@ -4,7 +4,7 @@ html{
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto';
     background-color:  #f9f9f9;
     margin: 0;
     width: 100%;
