--- a/Algoritmos/Site-Oficial/css/login-registro.css
+++ b/Algoritmos/Site-Oficial/css/login-registro.css
@@ -1,11 +1,11 @@
-body{
+body {
     margin: 0;
     height: 900px;
     width: 100%;
     font-family: 'Roboto';
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,7 +16,7 @@ body{
 
 }
 
-.coluna{
+.coluna {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,7 +27,7 @@ body{
     height: 100%;
 }
 
-.container-login{ 
+.container-login {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,7 +36,7 @@ body{
     height: fit-content;
     width: 100%;
 
-    background: linear-gradient(to bottom,#0b5f3d 0%,#0A5436 60%, #0a5c3b 100%);
+    background: linear-gradient(to bottom, #0b5f3d 0%, #0A5436 60%, #0a5c3b 100%);
 
     border: solid 2px rgb(1, 61, 1);
     border-radius: 20px;
@@ -44,12 +44,12 @@ body{
     padding-top: 20px;
     padding-bottom: 30px;
 
-    box-shadow: 0px 0px 8px 6px  rgba(255, 255, 255, 0.788);
+    box-shadow: 0px 0px 8px 6px rgba(255, 255, 255, 0.788);
 
 }
 
 
-.img-bg{
+.img-bg {
     background-image: url('../Imagens/login-bg.jpg');
     background-size: cover;
     filter: blur(4px);
@@ -65,10 +65,10 @@ body{
 }
 
 
-.logo-gs{
+.logo-gs {
     position: absolute;
     top: 620px;
-    
+
 
     display: flex;
     flex-direction: column;
@@ -80,101 +80,103 @@ body{
     border-bottom: 10px;
 
     background-color: rgb(230, 255, 207);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,0.5508404045211834) 100%);;
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5508404045211834) 100%);
+    ;
 
     height: fit-content;
-    width:  950px;
+    width: 950px;
 }
 
-.titulo { 
-    font-size: 28px; 
-    font-weight: bold; 
-    color: #FAF2FF; 
-} 
+.titulo {
+    font-size: 28px;
+    font-weight: bold;
+    color: #FAF2FF;
+}
 
-.card-login { 
-    text-align: center; 
-    background-color: white; 
+.card-login {
+    text-align: center;
+    background-color: white;
 
-    padding: 40px; 
+    padding: 40px;
     padding-bottom: 10px;
-    border-radius: 12px; 
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
-    max-width: 450px; 
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 450px;
     width: 100%;
-    
-} 
-  
 
-.card-login h2 { 
+}
+
+
+.card-login h2 {
     font-weight: bolder;
-    margin-bottom: 25px; 
-    color: #0A5436; 
-} 
-  
+    margin-bottom: 25px;
+    color: #0A5436;
+}
 
-.formulario .campo { 
-    margin-bottom: 20px; 
+
+.formulario .campo {
+    margin-bottom: 20px;
     text-align: left;
 }
-    
-.formulario span { 
+
+.formulario span {
     display: flex;
     flex-direction: row;
 
-    margin-bottom: 5px; 
-    color: #4E504D; 
-    font-weight: bold; 
+    margin-bottom: 5px;
+    color: #4E504D;
+    font-weight: bold;
 }
 
-.verify-text { 
-    display: block; 
-    margin-bottom: 5px; 
-    color: #eb0202; 
-    font-weight: bold; 
-}  
-   
-input { 
-    width: 100%; 
-    padding: 10px; 
-    border: 1px solid #CDD6CB; 
-    border-radius: 9px; 
+.verify-text {
+    display: block;
+    margin-bottom: 5px;
+    color: #eb0202;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #CDD6CB;
+    border-radius: 9px;
     font-size: 100%;
-} 
-     
-input:focus { 
-    outline: none; 
-    border-color: #DB6901; 
-} 
-    
-.esqueci { 
-    display: block; 
-    text-align: right; 
-    font-size: 12px; 
-    color: #DB6901; 
-    text-decoration: none; 
-    margin-bottom: 20px; 
-} 
-    
-.botao { 
-    background-color: #0A5436; 
-    color: white; 
-    border: none; 
-    padding: 12px; 
-    width: 100%; 
-    border-radius: 5px; 
-    cursor: pointer; 
-    font-weight: bold; 
+}
+
+input:focus {
+    outline: none;
+    border-color: #DB6901;
+}
+
+.esqueci {
+    display: block;
+    text-align: right;
+    font-size: 12px;
+    color: #DB6901;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+.botao {
+    background-color: #0A5436;
+    color: white;
+    border: none;
+    padding: 12px;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
     font-size: 25px;
     margin-bottom: 20px;
-} 
-    
-.botao:hover { 
-    background-color:#DB6900; 
-} 
+}
 
-.buttom-back{
-    padding-bottom: 15px;;
+.botao:hover {
+    background-color: #DB6900;
+}
+
+.buttom-back {
+    padding-bottom: 15px;
+    ;
     padding-left: 15px;
     width: 585px;
     display: flex;
@@ -184,17 +186,17 @@ input:focus {
     gap: 10px;
 }
 
-.buttom-back h1{
+.buttom-back h1 {
     font-size: 32px;
     color: white;
 }
 
-.img-g{
+.img-g {
     width: 60px;
     height: 60px;
 }
 
-.img-g:hover{
+.img-g:hover {
     width: 65px;
     height: 65px;
     transition: all 0.3s ease-out;
@@ -204,18 +206,22 @@ input:focus {
     color: red;
     font-size: 15px;
 }
+
 .campo .nomeCarac {
     color: red;
     font-size: 15px;
 }
+
 .campo .emailCarac {
     color: red;
     font-size: 15px;
 }
+
 .campo .cpf_cnpjCarac {
     color: red;
     font-size: 15px;
 }
+
 /* @media (max-width: 768px) {
     .coluna {
     width: 90%;
